modified the homepage html file.

--- a/WelcomePage/templates/base_generic.html
+++ b/WelcomePage/templates/base_generic.html
@@ -18,7 +18,7 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">CodeVenture</a>
+        <a class="navbar-brand" href="/">CodeVenture</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -75,10 +75,10 @@
                 <div class="col-md-4">
                     <a href="/page2/" class="card-link">
                         <div class="card">
-                            <img src="https://prod-discovery.edx-cdn.org/media/course/image/da1b2400-322b-459b-97b0-0c557f05d017-a3d1899c3344.small.png" alt="Course thumbnail 2" class="card-img-top">
+                            <img src="https://prod-discovery.edx-cdn.org/media/course/image/3a31db71-de8f-45f1-ae65-11981ed9d680-b801bb328333.small.png" alt="Course thumbnail 2" class="card-img-top">
                             <div class="card-body">
-                                <h5 class="card-title">Introduction to Computer Science</h5>
-                                <p class="card-text">An introduction to the intellectual enterprises of computer science and the art of programming.</p>
+                                <h5 class="card-title">Introduction to Artificial Intelligence with Python</h5>
+                                <p class="card-text">Learn to use machine learning in Python in this introductory course on artificial intelligence.</p>
                             </div>
                         </div>
                     </a>
@@ -89,7 +89,7 @@
                             <img src="https://prod-discovery.edx-cdn.org/media/course/image/8f8e5124-1dab-47e6-8fa6-3fbdc0738f0a-4978ad93b1c3.small.png" alt="Course thumbnail 3" class="card-img-top">
                             <div class="card-body">
                                 <h5 class="card-title">Web Programming with Python and JavaScript</h5>
-                                <p class="card-text">This course picks up where the last course leaves off, diving more deeply into the design and implementation of web apps with Python, JavaScript, and SQL using frameworks like Django, React, and Bootstrap.</p>
+                                <p class="card-text">This course dive more deeply into the design and implementation of web apps with Python.</p>
                             </div>
                         </div>
                     </a>
