Update the html file to get data from the database

--- a/WelcomePage/templates/base_generic.html
+++ b/WelcomePage/templates/base_generic.html
@@ -62,7 +62,7 @@
             <h2>Featured Courses</h2>
             <div class="row">
                 <div class="col-md-4">
-                    <a href="/page1/" class="card-link">
+                    <a href="/lecture/23/" class="card-link">
                         <div class="card">
                             <img src="https://prod-discovery.edx-cdn.org/media/course/image/2cc794d0-316d-42f7-bbfd-25c34e4cd5df-033e46d516c0.small.png" alt="Course thumbnail 1" class="card-img-top">
                             <div class="card-body">
@@ -73,7 +73,7 @@
                     </a>
                 </div>
                 <div class="col-md-4">
-                    <a href="/page2/" class="card-link">
+                    <a href="/lecture/15/" class="card-link">
                         <div class="card">
                             <img src="https://prod-discovery.edx-cdn.org/media/course/image/3a31db71-de8f-45f1-ae65-11981ed9d680-b801bb328333.small.png" alt="Course thumbnail 2" class="card-img-top">
                             <div class="card-body">
@@ -84,7 +84,7 @@
                     </a>
                 </div>
                 <div class="col-md-4">
-                    <a href="/page3/" class="card-link">
+                    <a href="/lecture/1/" class="card-link">
                         <div class="card">
                             <img src="https://prod-discovery.edx-cdn.org/media/course/image/8f8e5124-1dab-47e6-8fa6-3fbdc0738f0a-4978ad93b1c3.small.png" alt="Course thumbnail 3" class="card-img-top">
                             <div class="card-body">
