--- a/LearningResource/templates/lecture_page.html
+++ b/LearningResource/templates/lecture_page.html
@@ -31,8 +31,18 @@
 
     <div class="container mt-5">
         <!-- Course Title -->
-        <div class="course-title">
+        <div class="d-flex justify-content-between align-items-center course-title">
+            <div>
+                {% if submodule.prev_submodule %}
+                    <a href="{% url 'lecture_view' submodule.prev_submodule.id %}" class="btn btn-primary">Previous</a>
+                {% endif %}
+            </div>
             <h1>{{ submodule.parent_module.short_name }} - {{ submodule.name }}</h1>
+            <div>
+                {% if submodule.next_submodule %}
+                    <a href="{% url 'lecture_view' submodule.next_submodule.id %}" class="btn btn-primary">Next</a>
+                {% endif %}
+            </div>
         </div>
 
         <!-- YouTube Video Placeholder -->
