Add the sign up form for three user type

--- a/UserManagement/templates/login_register.html
+++ b/UserManagement/templates/login_register.html
@@ -36,7 +36,7 @@
 
             <div class="signup-link">
                 <span>Not a member?</span>
-                <a href="{% url 'register' %}">Sign up now</a>
+                <a href="{% url 'choose_user_type' %}">Sign up now</a>
             </div>
         </form>
         {% else %}
