Change the text for sign up

--- a/UserManagement/templates/login_register.html
+++ b/UserManagement/templates/login_register.html
@@ -35,7 +35,7 @@
             {% endif %}
 
             <div class="signup-link">
-                <span>Not a member?</span>
+                <span>Don't have an account?</span>
                 <a href="{% url 'choose_user_type' %}">Sign up now</a>
             </div>
         </form>
